Use quarkus HttpClient to perform requests to SecurityGroupService rather than OkHttp client. Configure and inject automatically the http clients for the account service and security group service.